# cloneme

./: .gitignore  COPYING  Makefile.am  Makefile.in  README  TODO  autogen.sh  cloneme.sh  configure.ac
commandlineversion/: cloneme.sh
src/: Makefile.am  Makefile.in  base.cc  base.h  basismethods.cc  basismethods.h  clonemecmd.sh  copyuser.cc  copyuser.h  createuser.cc  createuser.h  gui.cc  gui.h  installguiinstaller.cc  installguiinstaller.h  main.cc  myfilechooser.cc  myfilechooser.h
src/desktop/: Makefile.am  cloneme.desktop
src/sh/: Makefile.am  Makefile.in  cloneme.sh  clonemecmd.sh  grub-installer.sh  install_bootloader.sh  install_clean.sh  install_installer.sh  install_rsync.sh  mounting.sh  mountscript.sh  transferbetweenimages.sh  umountscript.sh  unmounting.sh  update.sh
src/share/: Makefile.am
src/share/sh/: Makefile.am  addnewusers.sh  backuprestore.sh  cleanuser.sh  copyuser.sh  dd-install.sh  devicefinder.sh  formatdisk.sh  groupexist.sh  grub-installer.sh  grub-installer_phase_1.sh  grub-installer_phase_2.sh  install-installer-compiler.sh  install-installer.sh  install_installer.sh  lilo-installer.sh  mountscript.sh  prepsyncscript.sh  report-missing-packages.sh  rsyncci.sh  umountscript.sh  umountsyncscript.sh  update-users.sh  useraddroot.sh
src/share/src/: Makefile.am
src/share/ui/: Makefile.am  cloneme.ui  copyuser.ui  createuser.ui  editor.ui  myfiledialog.ui
src/ui/: Makefile.am  Makefile.in  cloneme.ui  copyuser.ui  createuser.ui  icon.xcf  myfiledialog.ui
tools/: bash_format_cloneme.sh  bash_format_copyuser.sh  bash_format_createuser.sh  bashtoc++.sh
