## Process this file with automake to produce Makefile.in

supportscriptsdir = $(pkgdatadir)/sh

supportscripts_SCRIPTS = \
	addnewusers.sh \
	cleanuser.sh \
	copyuser.sh \
	devicefinder.sh \
	groupexist.sh \
	grub-installer_phase_1.sh \
	grub-installer_phase_2.sh \
	install-installer.sh \
	install-installer-compiler.sh \
	lilo-installer.sh \
	mountscript.sh \
	report-missing-packages.sh \
	rsyncci.sh \
	umountscript.sh
