## Process this file with automake to produce Makefile.in

## Created by Anjuta

clonesrcdir = $(pkgdatadir)/src
#for compiling if not right architecture
clonesrc_DATA =  \
	../../main.cc \
	../../gui.cc \
	../../gui.h \
	../../copyuser.cc \
	../../copyuser.h \
	../../createuser.cc \
	../../createuser.h \
	../../myfilechooser.cc \
	../../myfilechooser.h \
	../../basismethods.h \
	../../basismethods.cc
	

